--- a/code/mas detaille/information.html
+++ b/code/mas detaille/information.html
@@ -3,162 +3,224 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mas Sant Salvador - Informations</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Mas Sant Salvador - Présentation</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f7f7f7;
+            background-image: url('images/ENG-460363.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            color: #fff;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
 
         header {
-            background-color: #007bff;
-            color: white;
+            background-color: rgba(0, 0, 0, 0.8);
             text-align: center;
             padding: 20px;
-            width: 100%;
-            position: relative;
-        }
-
-        .return-button {
-            position: absolute;
-            left: 20px;
-            top: 50%;
-            transform: translateY(-50%);
-            background-color: #ff4d4d;
-            color: white;
-            font-size: 1em;
-            padding: 10px 15px;
-            border-radius: 8px;
-            text-decoration: none;
-            font-weight: bold;
-            transition: transform 0.2s ease;
-            box-shadow: 0 5px 10px rgba(255, 0, 0, 0.2);
-        }
-
-        .return-button:hover {
-            background-color: #e60000;
-            transform: scale(1.05);
-        }
-
-        h1 {
-            margin: 0;
             font-size: 2.5em;
+            font-weight: bold;
         }
 
-        .content-container {
-            width: 90%;
-            max-width: 1200px;
-            background-color: white;
+        .content {
+            background-color: rgba(0, 0, 0, 0.7);
             padding: 20px;
-            margin: 20px 0;
-            border-radius: 8px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            margin: 20px auto;
+            max-width: 900px;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
         }
 
-        .highlight-box {
-            background-color: #e6f7ff;
-            border-left: 4px solid #007bff;
-            padding: 15px;
-            margin: 20px 0;
-            border-radius: 5px;
+        .section {
+            margin-bottom: 20px;
         }
 
-        .section-title {
-            font-size: 1.5em;
-            margin-top: 20px;
-            color: #333;
-            border-bottom: 2px solid #007bff;
-            padding-bottom: 10px;
+        .section h2 {
+            font-size: 1.8em;
+            border-bottom: 2px solid #fff;
+            padding-bottom: 5px;
+            margin-bottom: 10px;
         }
 
-        .amenities, .location {
+        .section p {
+            font-size: 1.1em;
+            line-height: 1.6;
+        }
+
+        .features, .apartments {
             display: flex;
-            flex-direction: column;
+            flex-wrap: wrap;
             gap: 15px;
         }
 
-        .amenity, .room-info, .location-info {
-            display: flex;
-            align-items: center;
-            gap: 10px;
+        .feature, .apartment {
+            background-color: rgba(255, 255, 255, 0.1);
+            border: 1px solid #fff;
+            border-radius: 8px;
+            padding: 15px;
+            flex: 1;
+            min-width: 250px;
+            max-width: 300px;
+            text-align: center;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
         }
 
-        .room-info {
-            background-color: #f2f2f2;
+        .feature i, .apartment i {
+            font-size: 2em;
+            margin-bottom: 10px;
+        }
+
+        .feature h3, .apartment h3 {
+            font-size: 1.2em;
+            margin-bottom: 10px;
+        }
+
+        .dropdown {
+            text-align: left;
+        }
+
+        .dropdown button {
+            width: 100%;
+            padding: 10px;
+            background-color: rgba(255, 255, 255, 0.1);
+            color: #fff;
+            border: 1px solid #fff;
+            border-radius: 5px;
+            cursor: pointer;
+            text-align: left;
+            font-size: 1.1em;
+        }
+
+        .dropdown button:hover {
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+
+        .dropdown-content {
+            display: none;
+            background-color: rgba(255, 255, 255, 0.1);
+            border: 1px solid #fff;
+            margin-top: 5px;
             padding: 10px;
             border-radius: 5px;
         }
 
-        .amenities .amenity-icon, .rooms .room-icon, .location .location-icon {
-            font-size: 1.2em;
-            color: #007bff;
+        .dropdown button.active + .dropdown-content {
+            display: block;
         }
 
-        .positive {
+        .return-button {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            background-color: #fff;
+            color: #000;
+            font-size: 0.9em;
+            padding: 5px 10px;
+            border-radius: 5px;
+            text-decoration: none;
             font-weight: bold;
-            color: #28a745;
+            transition: background-color 0.3s;
+            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);
         }
 
-        footer {
-            background-color: #007bff;
-            color: white;
-            text-align: center;
-            padding: 15px;
-            width: 100%;
+        .return-button:hover {
+            background-color: #ddd;
         }
     </style>
 </head>
 <body>
 
-<header>
-    <a href="../mas.html" class="return-button">Retour au menu</a>
-    <h1>Mas Sant Salvador</h1>
-</header>
+<header>Mas Sant Salvador</header>
 
-<div class="content-container">
-    <div class="highlight-box">
-        <p><strong>Un havre de paix à Bompas</strong> : Le Mas Sant Salvador, maison de campagne centenaire, est idéalement situé à seulement 10 minutes des plages et de Perpignan. Profitez d'un <span class="positive">jardin commun</span>, d'une <span class="positive">connexion Wi-Fi gratuite</span> et d'un <span class="positive">parking privé</span> sur place.</p>
+<a href="../mas.html" class="return-button">Retour</a>
+
+<div class="content">
+    <div class="section">
+        <h2>Description</h2>
+        <p>
+            Doté d'un jardin commun, le Mas Sant Salvador est une vieille maison de campagne séculaire, située à Bompas, 
+            à 10 minutes de route des plages et de Perpignan. Vous bénéficierez gratuitement d'une connexion Wi-Fi et d'un 
+            parking privé sur place.
+        </p>
+        <p>Une cuisine équipée d'un réfrigérateur est mise à votre disposition.</p>
+        <p>
+            Collioure se trouve à 26 km et Argelès-sur-Mer à 21 km. L'aéroport le plus proche, celui de Perpignan-Rivesaltes, 
+            est, quant à lui, à 7 km.
+        </p>
     </div>
 
-    <h2 class="section-title">Description du Mas</h2>
-    <p>Ce charmant établissement vous accueille dans un cadre pittoresque avec plusieurs studios duplex, tous équipés pour un confort optimal :</p>
-    
-    <div class="rooms">
-        <div class="room-info"><span class="room-icon">🛏️</span> <strong>Studio en Duplex 1 :</strong> 1 très grand lit double + 1 canapé-lit (Capacité : 4 personnes)</div>
-        <div class="room-info"><span class="room-icon">🛏️</span> <strong>Studio en Duplex 2 :</strong> 1 lit simple + 1 très grand lit double + 1 canapé-lit (Capacité : 4 personnes)</div>
-        <div class="room-info"><span class="room-icon">🛏️</span> <strong>Studio en Duplex 3 :</strong> 1 très grand lit double + 1 canapé-lit (Capacité : 4 personnes)</div>
-        <div class="room-info"><span class="room-icon">🛏️</span> <strong>Studio en Duplex 4 :</strong> 1 très grand lit double + 1 canapé-lit (Capacité : 3 personnes)</div>
-        <div class="room-info"><span class="room-icon">🛏️</span> <strong>Studio en Duplex 5 :</strong> 1 très grand lit double + 1 canapé-lit (Capacité : 4 personnes)</div>
+    <div class="section">
+        <h2>Points forts</h2>
+        <div class="features">
+            <div class="feature">
+                <i>🚭</i>
+                <h3>Chambres non-fumeurs</h3>
+            </div>
+            <div class="feature">
+                <i>📶</i>
+                <h3>Wi-Fi gratuit</h3>
+            </div>
+            <div class="feature">
+                <i>🚗</i>
+                <h3>Parking gratuit</h3>
+            </div>
+            <div class="feature">
+                <i>👨‍👩‍👧‍👦</i>
+                <h3>Chambres familiales</h3>
+            </div>
+            <div class="feature">
+                <i>☕</i>
+                <h3>Plateau/bouilloire</h3>
+            </div>
+        </div>
     </div>
 
-    <h2 class="section-title">Équipements et Services</h2>
-    <div class="amenities">
-        <div class="amenity"><span class="amenity-icon">🚭</span> Chambres non-fumeurs</div>
-        <div class="amenity"><span class="amenity-icon">🌐</span> <span class="positive">Connexion Wi-Fi gratuite (7 Mb/s)</span></div>
-        <div class="amenity"><span class="amenity-icon">🚗</span> <span class="positive">Parking gratuit</span></div>
-        <div class="amenity"><span class="amenity-icon">☕</span> Plateau/bouilloire dans tous les hébergements</div>
-        <div class="amenity"><span class="amenity-icon">👨‍👩‍👧‍👦</span> Chambres familiales disponibles</div>
-    </div>
-
-    <h2 class="section-title">Localisation</h2>
-    <p>Le Mas Sant Salvador bénéficie d'un emplacement privilégié, à proximité de plusieurs attractions :</p>
-    <div class="location">
-        <div class="location-info"><span class="location-icon">🏖️</span> Plages de Torreilles à 10 minutes</div>
-        <div class="location-info"><span class="location-icon">🏰</span> Château royal de Collioure à 26 km</div>
-        <div class="location-info"><span class="location-icon">🌄</span> Argelès-sur-Mer à 21 km</div>
-        <div class="location-info"><span class="location-icon">✈️</span> Aéroport de Perpignan-Rivesaltes à 7 km</div>
+    <div class="section">
+        <h2>Appartements disponibles</h2>
+        <div class="apartments">
+            <div class="dropdown">
+                <button onclick="toggleDropdown(this)">Studio en Duplex - 4 personnes</button>
+                <div class="dropdown-content">
+                    <p>Chambre : 1 très grand lit double et 1 canapé-lit</p>
+                    <p>Salon : 1 canapé-lit</p>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button onclick="toggleDropdown(this)">Studio Duplex - 4 personnes</button>
+                <div class="dropdown-content">
+                    <p>1 lit simple, 1 très grand lit double et 1 canapé-lit</p>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button onclick="toggleDropdown(this)">Studio Duplex - 3 personnes</button>
+                <div class="dropdown-content">
+                    <p>1 très grand lit double et 1 canapé-lit</p>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button onclick="toggleDropdown(this)">Studio Duplex - 4 personnes</button>
+                <div class="dropdown-content">
+                    <p>1 très grand lit double et 1 canapé-lit</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
-<footer>
-    © 2024 Mas Sant Salvador. Tous droits réservés.
-</footer>
+<script>
+    function toggleDropdown(button) {
+        const activeButtons = document.querySelectorAll('.dropdown button.active');
+        activeButtons.forEach(btn => btn.classList.remove('active'));
+        
+        if (!button.classList.contains('active')) {
+            button.classList.add('active');
+        } else {
+            button.classList.remove('active');
+        }
+    }
+</script>
 
 </body>
 </html>
