--- a/code/mas.html
+++ b/code/mas.html
@@ -101,6 +101,59 @@
             color: white;
             border: 2px solid #ddd;
         }
+
+        /* Media Queries pour mobile et tablettes */
+        @media (max-width: 768px) {
+            header {
+                font-size: 1.5em;
+                padding: 15px;
+            }
+
+            .main-container {
+                padding: 15px;
+            }
+
+            .button-group {
+                grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+                padding: 10px 0;
+            }
+
+            .button span {
+                font-size: 1.1em;
+                padding: 12px;
+            }
+
+            .return-button {
+                font-size: 0.9em;
+                padding: 10px 25px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header {
+                font-size: 1.2em;
+                padding: 10px;
+            }
+
+            .button-group {
+                grid-template-columns: 1fr; /* 1 bouton par ligne sur les très petits écrans */
+                padding: 10px 0;
+            }
+
+            .button img {
+                height: 120px; /* Réduire la taille des images */
+            }
+
+            .button span {
+                font-size: 1em;
+                padding: 10px;
+            }
+
+            .return-button {
+                font-size: 0.85em;
+                padding: 8px 20px;
+            }
+        }
     </style>
 </head>
 <body>
